# catai

./: .dockerignore  .env.example  .gitignore  DOWNLOADS.md  Dockerfile  Dockerfile.api  Dockerfile.jenkins  Jenkinsfile  PHONE_GATEWAY.md  README.md  SERVING.md  TRAINING.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements-train.txt  requirements.txt  vercel.json
.github/workflows/: cashlog-ml-ci.yml
configs/cashlog/: categories.json  category_tree.json  correction_event.schema.json  ensemble.example.json  ensemble.serving.json  hybrid.airflow-candidate.json  hybrid.serving.json  leaf_semantics.json  ocr_lexicon.json  openimages_leaf_mapping.json  real_holdout.schema.json  uecfood_category_overrides.json
dags/: cashlog33_pipeline_dag.py  cashlog_feedback_dag.py  cashlog_training_dag.py
deploy/macos/: com.cashlog.model-api.plist.example  com.cashlog.model-tunnel.plist.example
deploy/phone_gateway/: proxy_server.py  requirements.txt  run_gateway.sh  start_gateway.sh  stop_gateway.sh  termux_boot_start.sh
deploy/phone_gateway/sshd_config.d/: 90-cashlog-security.conf
ml_docs/: CASHLOG33_DATA_CARD.md  CASHLOG33_FEEDBACK_LOOP.md  CASHLOG33_MODEL_DESIGN.md  CASHLOG33_OPERATIONS.md  CASHLOG33_PREDEPLOY_LABELING.md  CASHLOG33_RUN_LOG.md
reports/cashlog33/: model_selection.json  model_selection.md
reports/cashlog33/airflow_latest/: model_selection.json  model_selection.md
reports/cashlog33/airflow_latest/hybrid_e2e/: metrics.json  predictions.jsonl
reports/cashlog33/hybrid_e2e/: confusion_matrix.csv  metrics.json  per_class_metrics.csv  predictions.jsonl
reports/cashlog33/model_report/: REPORT.md  index.html  report.json
reports/cashlog33/vision_proxy/: confusion_matrix.csv  metrics.json  per_class_metrics.csv
scripts/: build_cashlog33_dataset.py  build_cashlog33_hybrid_config.py  build_cashlog33_text_dataset.py  build_cashlog_ensemble.py  collect_cashlog_openimages.py  collect_cashlog_openverse.py  curate_cashlog_feedback.py  download_assets.py  evaluate_cashlog33_hybrid.py  evaluate_cashlog33_scored_manifest.py  export_cashlog_feedback.py  generate_cashlog33_e2e_fixtures.py  generate_cashlog33_report.py  install_cashlog_mps_service.sh  launch_training.py  monitor_uecfood256_training.py  open_phone_reverse_tunnel.sh  review_cashlog_feedback.py  score_cashlog33_candidates.py  select_cashlog33_candidate.py  serve_cashlog_mps.sh  sync_cashlog_actual.py  train_cashlog33_text.py  train_cashlog33_vision_head.py  train_cashlog_category_from_uecfood.py  train_uecfood256_mobilenetv4.py  train_until_80_plateau_uecfood256.sh  train_until_90_plateau_uecfood256.sh  train_until_90_uecfood256.sh  validate_cashlog33_real_holdout.py
src/catai/: __init__.py  actual_dataset.py  cashlog_api.py  cashlog_classifier.py  cashlog_hybrid_classifier.py  cli.py  feedback.py  predeploy_labeler.py  predeploy_queue.py  report.py  telemetry.py
src/catai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/catai/labeler/: index.html  labeler.css  labeler.js
tests/: test_cashlog33_contract.py  test_feedback_pipeline.py  test_observability.py  test_phone_gateway.py  test_predeploy_labeler.py  test_predeploy_queue.py
(+2 files in other folders)
