[project]
name = "catai"
version = "0.1.0"
description = "Cashlog image classification and local model serving"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
hybrid = [
    "joblib>=1.5",
    "numpy>=2.0,<3",
    "opencv-python-headless>=4.10,<5.1",
    "onnxruntime>=1.22,<2",
    "pillow>=10.0",
    "pillow-heif>=0.18,<2",
    "rapidocr>=3.9,<4",
    "safetensors>=0.4",
    "scikit-learn>=1.7,<2",
    "sentencepiece>=0.2,<1",
    "torch>=2.8",
    "transformers>=4.57,<5",
]
model = [
    "joblib>=1.5",
    "numpy>=2.0,<3",
    "opencv-python-headless>=4.10,<5.1",
    "onnxruntime>=1.22,<2",
    "pillow>=10.0",
    "pillow-heif>=0.18,<2",
    "rapidocr>=3.9,<4",
    "safetensors>=0.4",
    "scikit-learn>=1.7,<2",
    "sentencepiece>=0.2,<1",
    "timm>=1.0",
    "torch>=2.8",
    "torchvision>=0.23",
    "transformers>=4.57,<5",
]

[project.scripts]
catai-predict-cashlog = "catai.cli:predict_cashlog_main"
catai-report-cashlog = "catai.report:main"
catai-serve-cashlog = "catai.cashlog_api:main"
catai-label-cashlog = "catai.predeploy_labeler:main"
catai-build-label-queue = "catai.predeploy_queue:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
catai = ["assets/cashlog_category_uecfood_mps/*", "labeler/*"]

[tool.vercel]
entrypoint = "main:app"
